# ROGII

./: .gitignore  README.md  pyproject.toml
docs/: modeling-notes.md  participation-plan.md  project-progress-summary.html  research-notes.md
notebooks/: rogii_flat_tail_baseline.py
scripts/: audit_data.py  evaluate_baseline.py  make_baseline_submission.py  run_eda.py
src/rogii_geology/: __init__.py  baseline.py  correlation.py  eda.py  features.py  io.py  submission.py  validation.py
tests/: test_baseline.py  test_correlation.py  test_eda.py
